# iiwa_kinematics

./: .gitignore  README.md
iiwa_arm/: CMakeLists.txt  package.xml
iiwa_arm/config/: forward_kinematics.rviz  iiwa_control.yaml  iiwa_controllers.yaml  kuka_arm.rviz  target_spawn_locations.yaml
iiwa_arm/include/iiwa_arm/: trajectory_sampler.h
iiwa_arm/launch/: cafe.launch  empty_world.launch  forward_kinematics.launch  iiwa14_upload.launch  iiwa_cafe.launch  iiwa_control.launch  iiwa_gazebo.launch  iiwa_world.launch  inverse_kinematics.launch  load_urdf.launch  robot_control.launch  robot_description.launch  target_description.launch  world.launch
iiwa_arm/meshes/iiwa14/: README.md
iiwa_arm/models/kinematics_bin/: model.sdf
iiwa_arm/models/kinematics_shelf/: model.sdf
iiwa_arm/scripts/: IK_server.py  IK_server_np.py  safe_spawner.sh  target_spawn.py
iiwa_arm/src/: trajectory_sampler.cpp
iiwa_arm/urdf/: iiwa.gazebo.xacro  iiwa.transmission.xacro  iiwa14.urdf.xacro  iiwa14.xacro  iiwa_gripper.xacro  target.urdf.xacro
iiwa_arm/worlds/: cafe.world
iiwa_moveit/: .setup_assistant  CMakeLists.txt  package.xml
iiwa_moveit/config/: EffortJointInterface_controllers.yaml  PositionJointInterface_controllers.yaml  VelocityJointInterface_controllers.yaml  controllers.yaml  fake_controllers.yaml  iiwa14.srdf  iiwa_arm.srdf  joint_limits.yaml  ompl_planning.yaml
iiwa_moveit/launch/: default_warehouse_db.launch  demo.launch  iiwa_arm_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
kr210_claw_moveit/: .setup_assistant  package.xml
kr210_claw_moveit/config/: controllers.yaml  joint_limits.yaml  kuka_arm.srdf
kr210_claw_moveit/launch/: demo.launch  move_group.launch  moveit_rviz.launch  planning_context.launch  trajectory_execution.launch.xml
kuka_arm/config/: forward_kinematics.rviz  iiwa_controllers.yaml  kr210_controllers.yaml  kuka_arm.rviz  target_spawn_locations.yaml
kuka_arm/launch/: cafe.launch  empty_world.launch  forward_kinematics.launch  load_urdf.launch  robot_control.launch  robot_description.launch  world.launch
kuka_arm/scripts/: target_spawn.py  test.sh
kuka_arm/src/: trajectory_sampler.cpp
kuka_arm/urdf/: iiwa.gazebo.xacro  iiwa14.urdf.xacro  iiwa14.xacro  iiwa_gripper.xacro  materials.xacro  target.urdf.xacro
kuka_arm/worlds/: cafe.world  pen.world
