<?xml version="1.0"?>
<package>
  <name>iiwa_moveit</name>
  <version>0.0.0</version>
  <description>The iiwa_moveit package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="wang@todo.todo">wang</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_setup_assistant</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>velocity_controllers</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_warehouse</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>iiwa_arm</run_depend>


  <buildtool_depend>catkin</buildtool_depend>
  <export>
  <!-- Other tools can request additional information be placed here -->
  </export>

</package>
